--- a/Enlaces.html
+++ b/Enlaces.html
@@ -39,6 +39,6 @@
 
 	<h4>Enlace a una pagina en la misma carpeta</h4>
 	<a href="Etiquetas_de_Texto.html" target="_blank">Ejemplo de etiquetas de texto</a>
-	<br><a href="Index.html"> <--Regresar al menu</a>
+	<br><a href="index.html"> <--Regresar al menu</a>
 </body>
 </html>
