--- a/imagenes.html
+++ b/imagenes.html
@@ -35,9 +35,9 @@ direccion de in ternet especificada como http://
 La etiqueta src es una etiqueta de autocierre
 norequiere </img>
 -->
-<img src="punpun.JPG" alt="No se encuentra la imagen" title="Oyasumi Pun Pun" height="400" width="600"> 
-<img src="FLCL.JPG" alt="No se encuentra la imagen" title="FLCL Cigarete">
-<img src="Link.JPG" alt="No se encuentra la imagen" title="The Legend Of Zelda Skyward Sword">
+<img src="punpun.jpg" alt="No se encuentra la imagen" title="Oyasumi Pun Pun" height="400" width="600"> 
+<img src="FLCL.jpg" alt="No se encuentra la imagen" title="FLCL Cigarete">
+<img src="Link.jpg" alt="No se encuentra la imagen" title="The Legend Of Zelda Skyward Sword">
 <h3>Imagen aleatorea</h3>
 <img src="http://lorempixel.com/400/200/">
 
