--- a/Etiquetas_de_Texto.html
+++ b/Etiquetas_de_Texto.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Ejemplo etiquetas texto</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="esttilos.css">
 </head>
 <body>
 	<h1>Etiqueas texto</h1>
