--- a/Menu.html
+++ b/Menu.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Mi primer página web</title>
 		<meta  charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="esttilos.css">
 	</head>
 	<body>
 			Hola mundo!
