--- a/Titulares.html
+++ b/Titulares.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Ejemplo de Titulares</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="esttilos.css">
 </head>
 <body>
 	<h1>Este es el titular de tanaño 1 y uf</h1>
