--- a/Enlaces.html
+++ b/Enlaces.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Enlaces</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="esttilos.css">
 </head>
 <body>
 	<h3>Ejemplo de enlaces entre paginas</h3>
@@ -39,6 +40,6 @@
 
 	<h4>Enlace a una pagina en la misma carpeta</h4>
 	<a href="Etiquetas_de_Texto.html" target="_blank">Ejemplo de etiquetas de texto</a>
-	<br><a href="index.html"> <--Regresar al menu</a>
+	<br><a href="Index.html"> <--Regresar al menu</a>
 </body>
 </html>
