--- a/Listas.html
+++ b/Listas.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Listas</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="esttilos.css">
 </head>
 <body>
 	<!--
