--- a/Parrafos.html
+++ b/Parrafos.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Ejemplo de parrafos</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="esttilos.css">
 </head>
 <body>
 	<h1>Párrafos en HTML</h1>
