--- a/imagenes.html
+++ b/imagenes.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Imagenes</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="esttilos.css">
 </head>
 <body>
 <h3>Ejemplo de imagenes</h3>
@@ -35,9 +36,9 @@ direccion de in ternet especificada como http://
 La etiqueta src es una etiqueta de autocierre
 norequiere </img>
 -->
-<img src="punpun.jpg" alt="No se encuentra la imagen" title="Oyasumi Pun Pun" height="400" width="600"> 
-<img src="FLCL.jpg" alt="No se encuentra la imagen" title="FLCL Cigarete">
-<img src="Link.jpg" alt="No se encuentra la imagen" title="The Legend Of Zelda Skyward Sword">
+<img src="punpun.JPG" alt="No se encuentra la imagen" title="Oyasumi Pun Pun" height="400" width="600"> 
+<img src="FLCL.JPG" alt="No se encuentra la imagen" title="FLCL Cigarete">
+<img src="Link.JPG" alt="No se encuentra la imagen" title="The Legend Of Zelda Skyward Sword">
 <h3>Imagen aleatorea</h3>
 <img src="http://lorempixel.com/400/200/">
 
